syntax = "proto3";

package pb.v1;

option go_package = "github.com/byorty/enterprise-application/internal/pkg/gen/pbv1";

import "patch/go.proto";
import "google/protobuf/timestamp.proto";

enum ProductStatus {
    PRODUCT_STATUS_UNVERIFIED = 0 [(go.value) = {
        name: "ProductStatusUnverified"
    }];
    PRODUCT_STATUS_ACTIVE = 1 [(go.value) = {
        name: "ProductStatusActive"
    }];
    PRODUCT_STATUS_ARCHIVED = 2 [(go.value) = {
        name: "ProductStatusArchived"
    }];
}

message ProductProperty {
    string name = 1;
    string value = 2;
}

message Product {
    string uuid = 1;
    ProductStatus status = 2;
    string name = 3;
    double price = 4;
    bool availability = 5;
    repeated ProductProperty properties = 6;
    google.protobuf.Timestamp created_at = 7;
}